--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#0F0F0F</color>
     <color name="white">#ffffff</color>
+    <color name="grayish">#aaaaaa</color>
 </resources>
