--- a/app/src/main/res/layout/fragment_favorite_tv_shows.xml
+++ b/app/src/main/res/layout/fragment_favorite_tv_shows.xml
@@ -7,18 +7,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/recyclerViewFavorites"
+            android:layout_height="match_parent" android:id="@+id/recyclerViewFavoriteTvShows"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-        android:id="@+id/textViewNoData"
+        android:id="@+id/textViewNoDataTvShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_no_favorites"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewFavorites"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
